ros2_ws/log/build_2024-08-12_11-45-28/serial_communicator/stdout_stderr.log
[ 50%] Building CXX object CMakeFiles/serial_node.dir/src/serial_node.cpp.o
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/serial_node.cpp:24:9: error: use of undeclared identifier 'work_guard_'
        work_guard_ = std::make_shared<boost::asio::io_service::work>(*io_);
        ^
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/serial_node.cpp:25:9: error: use of undeclared identifier 'io_thread_'
        io_thread_ = std::make_shared<std::thread>([this]() {
        ^
2 errors generated.
make[2]: *** [CMakeFiles/serial_node.dir/build.make:76: CMakeFiles/serial_node.dir/src/serial_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/serial_node.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
